@@ -1,31 +1,35 @@
 
 package ru.power_umc.forestxreborn.world.features.treedecorators;
 
-import net.minecraftforge.registries.RegisterEvent;
-import net.minecraftforge.registries.ForgeRegistries;
-import net.minecraftforge.fml.common.Mod;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.neoforged.neoforge.registries.RegisterEvent;
+import net.neoforged.fml.common.EventBusSubscriber;
+import net.neoforged.bus.api.SubscribeEvent;
 
 import net.minecraft.world.level.levelgen.feature.treedecorators.TreeDecoratorType;
 import net.minecraft.world.level.levelgen.feature.treedecorators.TreeDecorator;
 import net.minecraft.world.level.levelgen.feature.treedecorators.CocoaDecorator;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.Rotation;
+import net.minecraft.world.level.block.CocoaBlock;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.util.RandomSource;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.core.Direction;
 import net.minecraft.core.BlockPos;
 
 import java.util.List;
 
-import com.mojang.serialization.Codec;
+import com.mojang.serialization.MapCodec;
 
-@Mod.EventBusSubscriber(bus = Mod.EventBusSubscriber.Bus.MOD)
+@EventBusSubscriber(bus = EventBusSubscriber.Bus.MOD)
 public class OldGrowthForestFruitDecorator extends CocoaDecorator {
-	public static Codec<OldGrowthForestFruitDecorator> CODEC = Codec.unit(OldGrowthForestFruitDecorator::new);
+	public static MapCodec<OldGrowthForestFruitDecorator> CODEC = MapCodec.unit(OldGrowthForestFruitDecorator::new);
 	public static TreeDecoratorType<?> DECORATOR_TYPE = new TreeDecoratorType<>(CODEC);
 
 	@SubscribeEvent
-	public static void registerPointOfInterest(RegisterEvent event) {
-		event.register(ForgeRegistries.Keys.TREE_DECORATOR_TYPES, registerHelper -> registerHelper.register("old_growth_forest_tree_fruit_decorator", DECORATOR_TYPE));
+	public static void registerTreeDecorator(RegisterEvent event) {
+		event.register(Registries.TREE_DECORATOR_TYPE, ResourceLocation.parse("forest:old_growth_forest_tree_fruit_decorator"), () -> DECORATOR_TYPE);
 	}
 
 	public OldGrowthForestFruitDecorator() {
@@ -42,20 +46,30 @@ public class OldGrowthForestFruitDecorator extends CocoaDecorator {
 		RandomSource randomsource = context.random();
 		if (!(randomsource.nextFloat() >= 0.2F)) {
 			List<BlockPos> list = context.logs();
-			int i = list.get(0).getY();
-			list.stream().filter((p_69980_) -> {
-				return p_69980_.getY() - i <= 2;
-			}).forEach((p_226026_) -> {
-				for (Direction direction : Direction.Plane.HORIZONTAL) {
-					if (randomsource.nextFloat() <= 0.25F) {
-						Direction direction1 = direction.getOpposite();
-						BlockPos blockpos = p_226026_.offset(direction1.getStepX(), 0, direction1.getStepZ());
-						if (context.isAir(blockpos)) {
-							context.setBlock(blockpos, Blocks.AIR.defaultBlockState());
+			if (!list.isEmpty()) {
+				int i = list.getFirst().getY();
+				list.stream().filter(p_69980_ -> p_69980_.getY() - i <= 2).forEach(p_226026_ -> {
+					for (Direction direction : Direction.Plane.HORIZONTAL) {
+						if (randomsource.nextFloat() <= 0.25F) {
+							Direction direction1 = direction.getOpposite();
+							BlockPos blockpos = p_226026_.offset(direction1.getStepX(), 0, direction1.getStepZ());
+							if (context.isAir(blockpos)) {
+								context.setBlock(blockpos, Blocks.COCOA.defaultBlockState().setValue(CocoaBlock.AGE, randomsource.nextInt(3)).setValue(CocoaBlock.FACING, direction));
+							}
 						}
 					}
-				}
-			});
+				});
+			}
 		}
+	}
+
+	@SuppressWarnings("deprecation")
+	private static BlockState oriented(BlockState blockstate, Direction direction) {
+		return switch (direction) {
+			case SOUTH -> blockstate.rotate(Rotation.CLOCKWISE_180);
+			case EAST -> blockstate.rotate(Rotation.CLOCKWISE_90);
+			case WEST -> blockstate.rotate(Rotation.COUNTERCLOCKWISE_90);
+			default -> blockstate;
+		};
 	}
 }
